add anchors to nav
add anchors to nav

--- a/dococam/index.html
+++ b/dococam/index.html
@@ -29,8 +29,8 @@
 			<div class="row-fluid">
 				<div class="col-lg-5 col-md-5 col-sm-6 col-xs-12 nav-right">
 					<div class="home"><a href="index.html"><img src="images/home-lg.png"></a></div>
-					<div><a href="">功能介绍</a></div>	
-					<div><a href="#">
+					<div><a href="#features">功能介绍</a></div>	
+					<div><a href="#contact">
 						联系我们</a></div>
 				</div>
 			</div>
@@ -39,7 +39,7 @@
 	<div class="wrap banner">
 		<img src="images/banner.png">
 	</div>
-	<div class="wrap container-fluid">
+	<div class="wrap container-fluid" id="features">
 		<div class="row-fluid">
 			<div class="col-lg-2">
 				<img src="images/logo.png" class="logo">
@@ -91,7 +91,7 @@
 		</div>
 	</div>
 	<!-- 联系我们 -->
-	<div class="wrap container-fluid contact">
+	<div class="wrap container-fluid contact" id="contact">
 		<div class="row-fluid">
 			<div class="cloud-atlas">
 				<img src="images/cloud_atlas.png">
