Split into 2 pages.

--- a/dococam/index.html
+++ b/dococam/index.html
@@ -30,7 +30,7 @@
 				<div class="col-lg-5 col-md-5 col-sm-6 col-xs-12 nav-right">
 					<div class="home"><a href="index.html"><img src="images/home-lg.png"></a></div>
 					<div><a href="#features">功能介绍</a></div>	
-					<div><a href="#contact">
+					<div><a href="moulds.html">
 						联系我们</a></div>
 				</div>
 			</div>
@@ -71,37 +71,13 @@
 				<p class="join">来加入我们吧！</p>
 				<p class="join">创作你的视频故事集，从小象视频开始。</p>
 				<div class="download">
-					<img class="down"src="images/download.png">	
+					<a href="https://appsto.re/cn/DSY18.i"><img class="down"src="images/download.png"></a>	
 					<img src="images/qr.png" class="qr">
 				</div>
 			</div>
 			
 				
 			
-		</div>
-	</div>
-	<!-- 模板占位 -->
-	<div class="wrap">
-		<div class="container-fluid">
-			<div class="row-fluid">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<img src="images/templet.png"class="templet">
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- 联系我们 -->
-	<div class="wrap container-fluid contact" id="contact">
-		<div class="row-fluid">
-			<div class="cloud-atlas">
-				<img src="images/cloud_atlas.png">
-			</div>
-			<div class="contact-detail">
-				<p>北京东方云图科技有限公司</p>
-				<p>北京市丰台区郑王坟南6号5522室</p>
-				<p>010-67372012</p>
-				<p>service@orientcamera.com</p>
-			</div>
 		</div>
 	</div>
 	<!-- 页脚 -->
